# MultiFactor

./: .gitignore  README.md  pyproject.toml  test_mulitfactor.py
src/MultiFactor/: __init__.py  core.py  momentum.py  momentum_one.py  quality.py  quality_one.py  score.py  score_adj_weight.py  stockinfo.py  us_core.py  us_momentum.py  us_quality.py  us_stockinfo.py  us_value.py  value.py  value_one.py
src/MultiFactor/.ipynb_checkpoints/: core_test-checkpoint.ipynb
