[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# 1. PyPI에 등록될 배포 이름 (pip install MultiFactor)
name = "MultiFactor"
version = "0.2.0"
authors = [
  { name="HANHO", email="hanhoman@gmail.com" },
]
description = "멀티팩터 기반 주식 데이터 수집 패키지"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]


# 2. 패키지 실행에 필요한 외부 라이브러리 명시
dependencies = [
    "finance-datareader",
    "pandas",
	"numpy",	
	"matplotlib",
]

# 3. src 폴더 안의 패키지를 자동으로 찾도록 설정
[tool.setuptools.packages.find]
where = ["src"]